--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "jspdf-react",
   "version": "0.1.0",
   "private": true,
+  "homepage":".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "jspdf-react": "^1.0.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -34,8 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "jspdf-react": "^1.0.11"
   }
 }
